--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "develop", "qa", "uat", "prod" ]
   pull_request:
-    branches: [ "feature.*", "bugfix.*" ]
+    branches: [ "*" ]
 
 jobs:
 
