--- a/.github/workflows/argocd.yaml
+++ b/.github/workflows/argocd.yaml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     # Set job outputs to values from filter step
     outputs:
-      backend: ${{ steps.filter.outputs.backend }}
-      frontend: ${{ steps.filter.outputs.frontend }}
+      dev: ${{ steps.filter.outputs.dev }}
+      prod: ${{ steps.filter.outputs.prod }}
     steps:
     - uses: actions/checkout@v3
     - uses: dorny/paths-filter@v2
