--- a/.github/workflows/argocd.yaml
+++ b/.github/workflows/argocd.yaml
@@ -3,8 +3,7 @@ name: ArgoCD
 on:
   push:
     paths:
-      - "environments/dev/**"
-      - "environments/prod/**"
+      - "environments/**"
 
 jobs:
   # JOB to run change detection
