--- a/.github/workflows/argocd.yaml
+++ b/.github/workflows/argocd.yaml
@@ -24,7 +24,7 @@ jobs:
           dev:
             - 'environments/dev/**'
           prod:
-            - 'environments/sta/**'
+            - 'environments/prod/**'
 
   # JOB to deploy dev
   dev:
