--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Create tag in source repo
         uses: rickstaa/action-create-tag@v1
-        id: "create_tag"
+        id: "tag_create"
         with:
           tag: "v1.0"
           tag_exists_error: true
