--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Create tag in source repo
         run: |
           cd deploy-java
-          echo TAG=$(( $RANDOM % 10 ))
+          export TAG=$(( $RANDOM % 10 ))
           git config user.email "test@gmail.com"
           git config user.name "praise"
           git tag -a $TAG -m "test tag"
