--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -35,6 +35,7 @@ jobs:
         run: |
           cd deploy-java
           git fetch --tags
+          git checkout v1.0
           rsync -a --exclude='*.yml' ./ ./php-todo
       
       - name: Create commit and push
