--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -36,9 +36,10 @@ jobs:
           cd deploy-java
           git fetch --tags
           git checkout v1.0
-          rsync -a --exclude='*.yml' ./ ./php-todo
+          rsync -av --exclude='*.yml' ./ ./php-todo
       
       - name: Create commit and push
         run: |
+          cd ./php-todo
           git commit -am "test sync"
           git push
