--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -41,5 +41,7 @@ jobs:
       - name: Create commit and push
         run: |
           cd ./php-todo
+          git config user.email "test@gmail.com"
+          git config user.name "praise"
           git commit -am "test sync"
           git push
