--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -36,7 +36,7 @@ jobs:
           cd deploy-java
           git fetch --tags
           git checkout v1.0
-          rsync -av --exclude='*.yml' ./ ./php-todo
+          rsync -av --exclude='*.yml' ./ ../php-todo
       
       - name: Create commit and push
         run: |
