--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -36,7 +36,7 @@ jobs:
           cd deploy-java
           git fetch --tags
           git checkout v1.0
-          rsync -av --exclude='*.yml' ./ ../php-todo
+          rsync -av --exclude='**/.git' --exclude='**/*.yml' ./ ../php-todo
       
       - name: Create commit and push
         run: |
@@ -44,4 +44,4 @@ jobs:
           git config user.email "test@gmail.com"
           git config user.name "praise"
           git commit -am "test sync"
-          git push
+          git push origin HEAD:main
