--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -31,9 +31,11 @@ jobs:
 
       - name: Set tag
         run: |
+          cd ./deploy-java
           if [ -n $${{ inputs.tag }} ]
           then
             CURTAG=`git describe --abbrev=0 --tags`;
+            echo "Current tag: $CURTAG"
             CURTAG="${CURTAG/v/}"
             
             IFS='.' read -a vers <<< "$CURTAG"
