--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -35,7 +35,7 @@ jobs:
           if [ -n $${{ inputs.tag }} ]
           then
             set -eux
-            git fetch --tags
+            git fetch --unshallow
             git checkout $GITHUB_REF_NAME
             CURTAG=`git describe --match "v*" --tags | cut -d"-" -f1`;
             echo "Current tag: $CURTAG"
