--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           cd ./deploy-java
           echo ${{ inputs.tag }}
-          if [ -n ${{ inputs.tag }} ]
+          if [[ -n ${{ inputs.tag }} ]]
           then
             set -eux
             git fetch --unshallow
