--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -15,6 +15,8 @@ jobs:
   Sync:
     name: "Sync Repos"
     runs-on: ubuntu-latest
+    env:
+      TAG: ${{ inputs.tag }}
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -30,10 +32,11 @@ jobs:
           ref: main # change
 
       - name: Set tag
+        if: ${{ inputs.tag }} == ""
         run: |
           cd ./deploy-java
           echo ${{ inputs.tag }}
-          if [[ -n ${{ inputs.tag }} ]]
+          if [ -n ${{ inputs.tag }} ]
           then
             set -eux
             git fetch --unshallow
