--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -52,12 +52,12 @@ jobs:
           export TAG="v$MAJ.$MIN"
           echo $TAG
 
-
       - name: Create tag in source repo
         run: |
           cd deploy-java # change
           git config user.email "test@gmail.com" # change
           git config user.name "praise" # change
+          echo $TAG
           echo "Create Tag and push"
           git tag -a $TAG -m "test tag"
           git push -f origin $TAG
