--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -50,14 +50,14 @@ jobs:
           ((MIN+=1))
 
           export TAG="v$MAJ.$MIN"
-          echo $TAG
+          echo "Current: $TAG"
 
       - name: Create tag in source repo
         run: |
           cd deploy-java # change
           git config user.email "test@gmail.com" # change
           git config user.name "praise" # change
-          echo $TAG
+          echo "Current: $TAG"
           echo "Create Tag and push"
           git tag -a $TAG -m "test tag"
           git push -f origin $TAG
