--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch: 
     inputs:
       tag:
-        description: 'Tag to create'
+        description: 'Specify tag to create'
         required: true
         type: string
       
