--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -27,7 +27,7 @@ jobs:
           cd ./deploy-java
           set -eux
           git fetch --unshallow
-          git describe --match "v*" --tags
+          git describe --abbrev=0 --match "v*" --tags
           CURTAG=`git describe --match "v*" --tags | sort -u | cut -d"-" -f1`;
           echo "Current tag: $CURTAG"
           CURTAG="${CURTAG/v/}"
