--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -15,6 +15,7 @@ jobs:
   Tag:
     name: "Create Tag"
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' }}
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -23,7 +24,6 @@ jobs:
 
       - name: Set tag
         run: |
-          echo ${{ github.event_name }}
           cd ./deploy-java
           set -eux
           git fetch --unshallow
