--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -63,7 +63,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: ./deploy-java
-          ref: refs/tags/$TAG # change
+          ref: $TAG # change
 
       - name: Checkout dest repo
         uses: actions/checkout@v3
