--- a/.github/workflows/cdeploy.yaml
+++ b/.github/workflows/cdeploy.yaml
@@ -92,6 +92,9 @@ jobs:
         run:  go test -race -covermode=atomic -coverprofile=coverage.out -json ./... > report.json
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
+        with:
+          args: >
+            -Dsonar.qualitygate.wait=true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
